--- a/index.html
+++ b/index.html
@@ -14,14 +14,20 @@
 	<body class="is-preload">
 
 		<!-- Header -->
+			
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>Karan Chheda</strong><br />
-					Data Science Analyst<br />
-					<a href="http://html5up.net">HTML5 UP</a>.</h1>
+					<h1 style="font-size: 30px;"><strong>Karan Chheda</strong><br />
+						<span style="font-size: 20px;">SQL</span><br />
+						<span style="font-size: 20px;">Python</span><br />
+						<span style="font-size: 20px;">Tableau</span><br />
+						<span style="font-size: 20px;">Power BI</span><br />
+						<span style="font-size: 20px;">Excel</span><br />
+					</h1>
 				</div>
 			</header>
+			
 
 		<!-- Main -->
 			<div id="main">
@@ -29,12 +35,11 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Give me suggestions pls!! <br />
-							what content to include??</h2>
+							<h2>Data Analyst</h2>
 						</header>
 						<p>Performance-driven Data Analyst with a passion for leveraging analytical, critical thinking, problem-solving, and communication skills to provide data-driven solutions that drive business growth.</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="https://1drv.ms/b/s!Avi9CyXS7dW3jF8oCVItZdQwtU96?e=KEIt9f" target="_blank" class="button">View My Resume</a></li>
 						</ul>
 					</section>
 
@@ -84,38 +89,24 @@
 					<section id="three">
 						<h2>Get In Touch</h2>
 						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
-						<div class="row">
-							<div class="col-8 col-12-small">
-								<form method="post" action="#">
-									<div class="row gtr-uniform gtr-50">
-										<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
-										<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
-										<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
-									</div>
-								</form>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</div>
+
 							<div class="col-4 col-12-small">
 								<ul class="labeled-icons">
 									<li>
 										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
-										1234 Somewhere Rd.<br />
-										Nashville, TN 00000<br />
-										United States
+										San Francisco Bay Area, United States
 									</li>
 									<li>
 										<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
-										000-000-0000
+										<a href="tel:+14157124873">415-712-4873</a>
 									</li>
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="#">hello@untitled.tld</a>
+										<a href="mailto:kchheda97@gmail.com">kchheda97@gmail.com</a>
 									</li>
 								</ul>
 							</div>
-						</div>
+						
 					</section>
 
 				<!-- Four -->
@@ -445,12 +436,11 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 						<li><a href="https://www.linkedin.com/in/karanchheda97/" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://github.com/KaranChheda" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon solid fa-file-pdf"><span class="label">Resume</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://1drv.ms/b/s!Avi9CyXS7dW3jF8oCVItZdQwtU96?e=KEIt9f" target="_blank" class="icon solid fa-file-pdf"><span class="label">Resume</span></a></li>
+						<li><a href="mailto:kchheda97@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; KaranChheda</li> <i class="fas fa-rocket"></i>
-
 					</ul>
 				</div>
 			</footer>
