--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1 style="font-size: 30px;"><strong>Karan Chheda</strong><br />
+					<h1 style="font-size: 30px;"><strong>Karan Chheda</strong><br /> <br />
 						<span style="font-size: 20px;">SQL</span><br />
 						<span style="font-size: 20px;">Python</span><br />
 						<span style="font-size: 20px;">Tableau</span><br />
